test/conformance/chainsaw/verifyImages/clusterpolicy/standard/imageExtractors-complex-keyless/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: imageextractors-complex-keyless
spec:
  timeouts:
    apply: 10s
  steps:
  - name: step-00
    try:
    - apply:
        file: crd.yaml
    - assert:
        file: crd-ready.yaml
  - name: step-01
    try:
    - apply:
        file: policy.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: task.yaml
    - assert:
        file: task.yaml
